Edit:Function added

--- a/TaskSchudler.csproj
+++ b/TaskSchudler.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Splash.Designer.cs">
       <DependentUpon>Splash.cs</DependentUpon>
     </Compile>
+    <Compile Include="TaskRecords.cs" />
     <EmbeddedResource Include="All Tasks.resx">
       <DependentUpon>All Tasks.cs</DependentUpon>
     </EmbeddedResource>
@@ -115,6 +116,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="README.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
