--- a/TaskSchudler.csproj
+++ b/TaskSchudler.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Profile.Designer.cs">
       <DependentUpon>Profile.cs</DependentUpon>
     </Compile>
+    <Compile Include="ProfileRecords.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reminders.cs">
